--- a/forgotpass.html
+++ b/forgotpass.html
@@ -227,403 +227,64 @@
       <div
         class="container py-4 d-flex align-items-center justify-content-between"
       >
-        <h2 class="fs-5 fw-bolder">Cart</h2>
+        <h2 class="fs-5 fw-bolder">Forgot Password</h2>
         <span class="text-border-color"
           ><a class="text-decoration-none text-primary fw-medium" href=""
             >Home</a
           >
-          - Cart</span
+          - Forgot Password</span
         >
       </div>
     </section>
-    <!-- VIEW CART -->
-    <section class="section-detail container my-5">
-      <form action="">
-        <div
-          class="wow fadeInUp table-content border border-2 rounded-2 table-responsive"
-        >
-          <table class="table mb-0">
-            <thead class="table-secondary">
-              <tr>
-                <th scope="col " class="fw-semibold">Img</th>
-                <th scope="col " class="fw-semibold">Name</th>
-                <th scope="col " class="fw-semibold">Price</th>
-                <th scope="col " class="fw-semibold">Quantity</th>
-                <th scope="col " class="fw-semibold">Total</th>
-                <th scope="col " class="fw-semibold text-center">Action</th>
-              </tr>
-            </thead>
-            <tbody class="table-light">
-              <tr class="align-middle">
-                <th scope="row">
-                  <img
-                    src="uploads/product1.jpg"
-                    alt=""
-                    width="60"
-                    height="60"
-                    class="border border-secondary rounded-2"
-                  />
-                </th>
-                <td>
-                  <span class="fw-medium text-border-color">Rganic Lemon</span>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-                <td>
-                  <div
-                    class="qty-cart border w-50 rounded-1 bg-white fw-medium text-border-color text-center"
-                  >
-                    <button type="button" class="plus">+</button>
-                    <input
-                      type="text"
-                      class="text-center border-0 qty-cart-input"
-                      value="1"
-                      minlength="1"
-                      maxlength="20"
-                    />
-                    <button type="button" class="plus">-</button>
-                  </div>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
 
-                <td class="text-center">
-                  <ion-icon
-                    class="cursor fs-5 text-border-color delete-cart-pro"
-                    name="trash-sharp"
-                  ></ion-icon>
-                </td>
-              </tr>
-              <tr class="align-middle">
-                <th scope="row">
-                  <img
-                    src="uploads/product2.jpg"
-                    alt=""
-                    width="60"
-                    height="60"
-                    class="border border-secondary rounded-2"
+    <!-- LOGIN -->
+    <section class="section-login my-7 container">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-4"></div>
+            <div
+              class="col-4 wow fadeInUp d-flex justify-content-center p-4 border rounded-2 border-secondary d-flex flex-column gap-3"
+            >
+              <div class="form-logo d-flex justify-content-center">
+                <img src="uploads/logo.png" alt="" width="120" />
+              </div>
+              <form
+                action=""
+                class="form-content mt-3 d-flex flex-column gap-3"
+              >
+                <div class="form-item">
+                  <label for="email" class="fw-medium">Email Address</label>
+                  <input
+                    id="email"
+                    type="email"
+                    required
+                    class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
+                    placeholder="Email"
                   />
-                </th>
-                <td>
-                  <span class="fw-medium text-border-color">Rganic Lemon</span>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-                <td>
-                  <div
-                    class="qty-cart border w-50 rounded-1 bg-white fw-medium text-border-color text-center"
+                </div>
+                <div
+                  class="login-btn mt-2 d-flex justify-content-between align-items-center"
+                >
+                  <button class="btn btn-primary text-white fw-semibold">
+                    Submit
+                  </button>
+                  <span
+                    ><a
+                      class="text-border-color text-decoration-none fs-6"
+                      href="#"
+                      >Signup?</a
+                    ></span
                   >
-                    <button type="button" class="plus">+</button>
-                    <input
-                      type="text"
-                      class="text-center border-0 qty-cart-input"
-                      value="1"
-                      minlength="1"
-                      maxlength="20"
-                    />
-                    <button type="button" class="plus">-</button>
-                  </div>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-
-                <td class="text-center">
-                  <ion-icon
-                    class="cursor fs-5 text-border-color delete-cart-pro"
-                    name="trash-sharp"
-                  ></ion-icon>
-                </td>
-              </tr>
-              <tr class="align-middle">
-                <th scope="row">
-                  <img
-                    src="uploads/product3.jpg"
-                    alt=""
-                    width="60"
-                    height="60"
-                    class="border border-secondary rounded-2"
-                  />
-                </th>
-                <td>
-                  <span class="fw-medium text-border-color">Rganic Lemon</span>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-                <td>
-                  <div
-                    class="qty-cart border w-50 rounded-1 bg-white fw-medium text-border-color text-center"
-                  >
-                    <button type="button" class="plus">+</button>
-                    <input
-                      type="text"
-                      class="text-center border-0 qty-cart-input"
-                      value="1"
-                      minlength="1"
-                      maxlength="20"
-                    />
-                    <button type="button" class="plus">-</button>
-                  </div>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-
-                <td class="text-center">
-                  <ion-icon
-                    class="cursor fs-5 text-border-color delete-cart-pro"
-                    name="trash-sharp"
-                  ></ion-icon>
-                </td>
-              </tr>
-              <tr>
-                <td colspan="6" class="text-end py-3 border-bottom-0">
-                  <span class="fw-bolder fs-5">Total Price: $123.122</span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="cart-update my-4 d-flex justify-content-between mb-7">
-          <div class="cart-link">
-            <a href="" class="text-dark fw-medium fs-6">Continue Shopping</a>
+                </div>
+              </form>
+            </div>
+            <div class="col-4"></div>
           </div>
-          <button class="btn btn-primary fw-bolder text-white">
-            Check out
-          </button>
         </div>
-      </form>
+      </div>
     </section>
-    <!-- PRODUCT POPULAR  -->
-    <div class="popular-detail">
-      <div class="container">
-        <div
-          class="section-header d-flex justify-content-center flex-column align-items-center mb-3"
-        >
-          <h3 class="fw-bolder">Popular Products</h3>
-          <p class="w-50 text-center fs-6 text-border-color">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi nisi
-            facilis provident eos accusamus voluptatibus in
-          </p>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row g-3">
-          <div class="col-xxl-3 col-lg-3 col-xl-4 col-6 wow fadeInUp">
-            <div
-              class="position-relative card-product cursor card p-3 border border-2 bg-white border-light rounded-3 shadow-sm"
-            >
-              <div class="card-header border-0 h-60 position-relative">
-                <img
-                  src="uploads/product1.jpg"
-                  alt=""
-                  class="img-cover border border-2 border-light rounded-3"
-                />
-                <div class="card-side-view position-absolute translate-middle">
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="eye-outline"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop"
-                  ></ion-icon>
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="heart-outline"
-                  ></ion-icon>
-                </div>
-                <div
-                  class="add-to-cart position-absolute top-100 start-50 translate-middle"
-                >
-                  <ion-icon
-                    class="p-2 rounded-5 bg-third text-primary border"
-                    name="cart-outline"
-                  ></ion-icon>
-                </div>
-              </div>
-              <div class="product-sale position-absolute">
-                <span
-                  class="text-sale py-1 px-4 rounded-2 text-white fw-bolder bg-primary"
-                  >Sale</span
-                >
-              </div>
-              <div class="card-body p-0 pt-3 border-0 text-center">
-                <h3 class="product-category fs-8 text-border-color">
-                  Vegetable
-                </h3>
-                <span class="product-name hover-list fs-6 fw-medium"
-                  >Fresh organic villa farm lomon 500gm pack</span
-                >
-                <div
-                  class="product-price d-flex gap-2 justify-content-center fs-6 pt-2 align-items-center"
-                >
-                  <span class="price-new fw-bold text-primary"
-                    >$ <span>120.25</span></span
-                  >
-                  <del class="price-old text-border-color fw-normal"
-                    >$ <span>123.25</span></del
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-xxl-3 col-lg-3 col-xl-4 col-6 wow fadeInUp">
-            <div
-              class="position-relative card-product cursor card p-3 border border-2 bg-white border-light rounded-3 shadow-sm"
-            >
-              <div class="card-header border-0 h-60 position-relative">
-                <img
-                  src="uploads/product2.jpg"
-                  alt=""
-                  class="img-cover border border-2 border-light rounded-3"
-                />
-                <div class="card-side-view position-absolute translate-middle">
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="eye-outline"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop"
-                  ></ion-icon>
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="heart-outline"
-                  ></ion-icon>
-                </div>
-                <div
-                  class="add-to-cart position-absolute top-100 start-50 translate-middle"
-                >
-                  <ion-icon
-                    class="p-2 rounded-5 bg-third text-primary border"
-                    name="cart-outline"
-                  ></ion-icon>
-                </div>
-              </div>
-
-              <div class="card-body p-0 pt-3 border-0 text-center">
-                <h3 class="product-category fs-8 text-border-color">
-                  Vegetable
-                </h3>
-                <span class="product-name hover-list fs-6 fw-medium"
-                  >Fresh organic villa farm lomon 500gm pack</span
-                >
-                <div
-                  class="product-price d-flex gap-2 justify-content-center fs-6 pt-2 align-items-center"
-                >
-                  <span class="price-new fw-bold text-primary"
-                    >$ <span>120.25</span></span
-                  >
-                  <del class="price-old text-border-color fw-normal"
-                    >$ <span>123.25</span></del
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xxl-3 col-lg-3 col-xl-4 col-6 wow fadeInUp">
-            <div
-              class="position-relative card-product cursor card p-3 border border-2 bg-white border-light rounded-3 shadow-sm"
-            >
-              <div class="card-header border-0 h-60 position-relative">
-                <img
-                  src="uploads/product3.jpg"
-                  alt=""
-                  class="img-cover border border-2 border-light rounded-3"
-                />
-                <div class="card-side-view position-absolute translate-middle">
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="eye-outline"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop"
-                  ></ion-icon>
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="heart-outline"
-                  ></ion-icon>
-                </div>
-                <div
-                  class="add-to-cart position-absolute top-100 start-50 translate-middle"
-                >
-                  <ion-icon
-                    class="p-2 rounded-5 bg-third text-primary border"
-                    name="cart-outline"
-                  ></ion-icon>
-                </div>
-              </div>
-              <div class="product-sale position-absolute">
-                <span
-                  class="text-sale py-1 px-4 rounded-2 text-white fw-bolder bg-primary"
-                  >Sale</span
-                >
-              </div>
-              <div class="card-body p-0 pt-3 border-0 text-center">
-                <h3 class="product-category fs-8 text-border-color">
-                  Vegetable
-                </h3>
-                <span class="product-name hover-list fs-6 fw-medium"
-                  >Fresh organic villa farm lomon 500gm pack</span
-                >
-                <div
-                  class="product-price d-flex gap-2 justify-content-center fs-6 pt-2 align-items-center"
-                >
-                  <span class="price-new fw-bold text-primary"
-                    >$ <span>120.25</span></span
-                  >
-                  <del class="price-old text-border-color fw-normal"
-                    >$ <span>123.25</span></del
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xxl-3 col-lg-3 col-xl-4 col-6 wow fadeInUp">
-            <div
-              class="position-relative card-product cursor card p-3 border border-2 bg-white border-light rounded-3 shadow-sm"
-            >
-              <div class="card-header border-0 h-60 position-relative">
-                <img
-                  src="uploads/product4.jpg"
-                  alt=""
-                  class="img-cover border border-2 border-light rounded-3"
-                />
-                <div class="card-side-view position-absolute translate-middle">
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="eye-outline"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop"
-                  ></ion-icon>
-                  <ion-icon
-                    class="p-2 rounded-5 bg-white border cursor"
-                    name="heart-outline"
-                  ></ion-icon>
-                </div>
-                <div
-                  class="add-to-cart position-absolute top-100 start-50 translate-middle"
-                >
-                  <ion-icon
-                    class="p-2 rounded-5 bg-third text-primary border"
-                    name="cart-outline"
-                  ></ion-icon>
-                </div>
-              </div>
-              <div class="card-body p-0 pt-3 border-0 text-center">
-                <h3 class="product-category fs-8 text-border-color">
-                  Vegetable
-                </h3>
-                <span class="product-name hover-list fs-6 fw-medium"
-                  >Fresh organic villa farm lomon 500gm pack</span
-                >
-                <div
-                  class="product-price d-flex gap-2 justify-content-center fs-6 pt-2 align-items-center"
-                >
-                  <span class="price-new fw-bold text-primary"
-                    >$ <span>120.25</span></span
-                  >
-                  <del class="price-old text-border-color fw-normal"
-                    >$ <span>123.25</span></del
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- FOOTER  -->
     <footer class="footer mt-6 bg-third">
       <div class="container py-7 border-bottom border-2">
