--- a/wishlist.html
+++ b/wishlist.html
@@ -227,178 +227,19 @@
       <div
         class="container py-4 d-flex align-items-center justify-content-between"
       >
-        <h2 class="fs-5 fw-bolder">Cart</h2>
+        <h2 class="fs-5 fw-bolder">Wishlist</h2>
         <span class="text-border-color"
           ><a class="text-decoration-none text-primary fw-medium" href=""
             >Home</a
           >
-          - Cart</span
+          - Wishlist</span
         >
       </div>
     </section>
     <!-- VIEW CART -->
-    <section class="section-detail container my-5">
-      <form action="">
-        <div
-          class="wow fadeInUp table-content border border-2 rounded-2 table-responsive"
-        >
-          <table class="table mb-0">
-            <thead class="table-secondary">
-              <tr>
-                <th scope="col " class="fw-semibold">Img</th>
-                <th scope="col " class="fw-semibold">Name</th>
-                <th scope="col " class="fw-semibold">Price</th>
-                <th scope="col " class="fw-semibold">Quantity</th>
-                <th scope="col " class="fw-semibold">Total</th>
-                <th scope="col " class="fw-semibold text-center">Action</th>
-              </tr>
-            </thead>
-            <tbody class="table-light">
-              <tr class="align-middle">
-                <th scope="row">
-                  <img
-                    src="uploads/product1.jpg"
-                    alt=""
-                    width="60"
-                    height="60"
-                    class="border border-secondary rounded-2"
-                  />
-                </th>
-                <td>
-                  <span class="fw-medium text-border-color">Rganic Lemon</span>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-                <td>
-                  <div
-                    class="qty-cart border w-50 rounded-1 bg-white fw-medium text-border-color text-center"
-                  >
-                    <button type="button" class="plus">+</button>
-                    <input
-                      type="text"
-                      class="text-center border-0 qty-cart-input"
-                      value="1"
-                      minlength="1"
-                      maxlength="20"
-                    />
-                    <button type="button" class="plus">-</button>
-                  </div>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
 
-                <td class="text-center">
-                  <ion-icon
-                    class="cursor fs-5 text-border-color delete-cart-pro"
-                    name="trash-sharp"
-                  ></ion-icon>
-                </td>
-              </tr>
-              <tr class="align-middle">
-                <th scope="row">
-                  <img
-                    src="uploads/product2.jpg"
-                    alt=""
-                    width="60"
-                    height="60"
-                    class="border border-secondary rounded-2"
-                  />
-                </th>
-                <td>
-                  <span class="fw-medium text-border-color">Rganic Lemon</span>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-                <td>
-                  <div
-                    class="qty-cart border w-50 rounded-1 bg-white fw-medium text-border-color text-center"
-                  >
-                    <button type="button" class="plus">+</button>
-                    <input
-                      type="text"
-                      class="text-center border-0 qty-cart-input"
-                      value="1"
-                      minlength="1"
-                      maxlength="20"
-                    />
-                    <button type="button" class="plus">-</button>
-                  </div>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-
-                <td class="text-center">
-                  <ion-icon
-                    class="cursor fs-5 text-border-color delete-cart-pro"
-                    name="trash-sharp"
-                  ></ion-icon>
-                </td>
-              </tr>
-              <tr class="align-middle">
-                <th scope="row">
-                  <img
-                    src="uploads/product3.jpg"
-                    alt=""
-                    width="60"
-                    height="60"
-                    class="border border-secondary rounded-2"
-                  />
-                </th>
-                <td>
-                  <span class="fw-medium text-border-color">Rganic Lemon</span>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-                <td>
-                  <div
-                    class="qty-cart border w-50 rounded-1 bg-white fw-medium text-border-color text-center"
-                  >
-                    <button type="button" class="plus">+</button>
-                    <input
-                      type="text"
-                      class="text-center border-0 qty-cart-input"
-                      value="1"
-                      minlength="1"
-                      maxlength="20"
-                    />
-                    <button type="button" class="plus">-</button>
-                  </div>
-                </td>
-                <td><span class="fw-medium text-border-color">$56.00</span></td>
-
-                <td class="text-center">
-                  <ion-icon
-                    class="cursor fs-5 text-border-color delete-cart-pro"
-                    name="trash-sharp"
-                  ></ion-icon>
-                </td>
-              </tr>
-              <tr>
-                <td colspan="6" class="text-end py-3 border-bottom-0">
-                  <span class="fw-bolder fs-5">Total Price: $123.122</span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="cart-update my-4 d-flex justify-content-between mb-7">
-          <div class="cart-link">
-            <a href="" class="text-dark fw-medium fs-6">Continue Shopping</a>
-          </div>
-          <button class="btn btn-primary fw-bolder text-white">
-            Check out
-          </button>
-        </div>
-      </form>
-    </section>
     <!-- PRODUCT POPULAR  -->
-    <div class="popular-detail">
-      <div class="container">
-        <div
-          class="section-header d-flex justify-content-center flex-column align-items-center mb-3"
-        >
-          <h3 class="fw-bolder">Popular Products</h3>
-          <p class="w-50 text-center fs-6 text-border-color">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi nisi
-            facilis provident eos accusamus voluptatibus in
-          </p>
-        </div>
-      </div>
+    <div class="popular-detail my-7">
       <div class="container">
         <div class="row g-3">
           <div class="col-xxl-3 col-lg-3 col-xl-4 col-6 wow fadeInUp">
