layout not debug

--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
     <!-- About -->
     <section class="container section-about-list my-7">
       <div class="row g-5">
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 col-sm-12 wow fadeInLeft">
           <div class="about-img rounded-2 overflow-hidden">
             <img
               src="uploads/aboutus.jpg"
@@ -250,7 +250,7 @@
             />
           </div>
         </div>
-        <div class="col-lg-6 col-sm-12 p-5">
+        <div class="col-lg-6 col-sm-12 p-5 wow fadeInRight">
           <div class="about-content d-flex flex-column gap-3">
             <h2 class="fw-bolder fs-3">About The Carrot</h2>
 
