--- a/404.html
+++ b/404.html
@@ -226,7 +226,7 @@
 
     <!-- 404 -->
     <div class="container my-7">
-      <div class="404-img d-flex justify-content-center">
+      <div class="404-img d-flex justify-content-center wow fadeInUp">
         <img src="uploads/main.png" alt="" width="700" />
       </div>
       <div class="404-content d-flex justify-content-center flex-column">
