--- a/about.html
+++ b/about.html
@@ -337,7 +337,7 @@
                 class="fs-1 text-primary"
                 name="call-outline"
               ></ion-icon>
-              <h2 class="fs-5 fw-bolder">24X7 support</h2>
+              <h2 class="fs-5 fw-bolder">24/7 support</h2>
               <div
                 class="d-flex align-items-center justify-content-center gap-2"
               >
