--- a/account.html
+++ b/account.html
@@ -299,7 +299,113 @@
           class="col-lg-9 col-sm-12 col-12 wow fadeInRight p-5 border border-2 rounded-2 border-secondary"
         >
           <div class="account-content p-5">
-            <form action="" class="d-flex flex-column gap-3">
+            <form class="row g-3 needs-validation" novalidate>
+              <div class="col-md-6 position-relative">
+                <label for="validationTooltip01" class="form-label fw-medium"
+                  >First name</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="validationTooltip01"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Please provide a valid firstname.
+                </div>
+                <!-- <div class="valid-tooltip">Looks good!</div> -->
+              </div>
+              <div class="col-md-6 position-relative">
+                <label for="validationTooltip02" class="form-label fw-medium"
+                  >Last name</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="validationTooltip02"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Please provide a valid lastname.
+                </div>
+                <!-- <div class="valid-tooltip">Looks good!</div> -->
+              </div>
+              <div class="col-md-12">
+                <label for="validationCustom03" class="form-label fw-medium"
+                  >Address</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="validationCustom03"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Please provide a valid address.
+                </div>
+              </div>
+              <span class="fs-8 text-border-color"
+                >This will be how your name will be displayed in the account
+                section and in reviews</span
+              >
+              <!-- pass -->
+              <div class="col-md-12">
+                <label for="passold" class="form-label fw-medium"
+                  >Password</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="passold"
+                  required
+                  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+                />
+                <div class="invalid-feedback">
+                  Password is not strong enough
+                </div>
+              </div>
+              <div class="col-md-12">
+                <label for="passnew" class="form-label fw-medium"
+                  >Password</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="passnew"
+                  required
+                  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+                />
+                <div class="invalid-feedback">
+                  Password is not strong enough
+                </div>
+
+                <div class="valid-tooltip">Looks good!</div>
+              </div>
+              <div class="col-md-12">
+                <label for="passnewchange" class="form-label fw-medium"
+                  >Password</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="passnewchange"
+                  required
+                  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+                />
+                <div class="invalid-feedback">
+                  Password is not strong enough
+                </div>
+              </div>
+              <div class="col-12">
+                <button
+                  class="btn btn-primary text-white fw-bolder"
+                  type="submit"
+                >
+                  Update
+                </button>
+              </div>
+            </form>
+            <!-- <form action="" class="d-flex flex-column gap-3">
               <div class="row group-form">
                 <div class="col-md-6">
                   <div class="form-item">
@@ -356,7 +462,7 @@
                   type="password"
                   required=""
                   class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
-                  placeholder="Pass Change"
+                  placeholder="Password Change"
                 />
               </div>
               <div class="form-item">
@@ -373,7 +479,7 @@
                   Update
                 </button>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </div>
