--- a/home.html
+++ b/home.html
@@ -304,7 +304,7 @@
       </div>
     </section>
     <!-- BODY  -->
-    <section class="section-categories my-5">
+    <section class="section-categories position-relative my-5">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-12 p-3">
@@ -437,7 +437,7 @@
       </div>
     </section>
     <!-- PRODUCT POPULAR -->
-    <section class="product-popular my-6">
+    <section class="product-popular position-relative my-6">
       <div class="container">
         <div
           class="section-header d-flex justify-content-center flex-column align-items-center mb-3"
@@ -449,7 +449,7 @@
           </p>
         </div>
       </div>
-      <div class="container product-main">
+      <div class="container position-relative product-main">
         <div class="row g-3">
           <div class="col-xl-3 col-lg-4 col-12">
             <div class="row g-3 position-sticky top-0">
@@ -1363,7 +1363,7 @@
       </div>
     </section>
     <!-- SERVICE  -->
-    <div class="section-service my-6">
+    <div class="section-service position-relative my-6">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 wow fadeInLeft">
@@ -1578,7 +1578,7 @@
       </div>
     </section>
     <!-- HOT PRODUCT  -->
-    <section class="product-hot my-6">
+    <section class="product-hot position-relative my-6">
       <div class="container">
         <div
           class="section-header d-flex justify-content-center flex-column align-items-center mb-3"
@@ -2314,7 +2314,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer mt-6 bg-third">
+    <footer class="footer position-relative mt-6 bg-third">
       <div class="container py-7 border-bottom border-2">
         <div class="row">
           <div
