--- a/blog.html
+++ b/blog.html
@@ -245,7 +245,7 @@
           <div class="row g-3">
             <div class="col-lg-6 wow fadeInLeft">
               <div class="card-news">
-                <div class="news-header rounded-3 overflow-hidden">
+                <div class="news-header px-0 rounded-3 overflow-hidden">
                   <img
                     class="img-cover rounded-3"
                     src="uploads/banner-product2.jpg"
@@ -292,7 +292,7 @@
             </div>
             <div class="col-lg-6 wow fadeInRight">
               <div class="card-news">
-                <div class="news-header rounded-3 overflow-hidden">
+                <div class="news-header rounded-3 px-0 overflow-hidden">
                   <img
                     class="img-cover rounded-3"
                     src="uploads/banner-product3.jpg"
@@ -345,7 +345,7 @@
         <div id="blog-new" class="owl-carousel owl-theme">
           <div class="item wow fadeInUp mx-1">
             <div class="card-news">
-              <div class="news-header rounded-3 overflow-hidden">
+              <div class="news-header px-0 rounded-3 overflow-hidden">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product2.jpg"
@@ -391,7 +391,7 @@
           </div>
           <div class="item wow fadeInUp mx-1">
             <div class="card-news">
-              <div class="news-header rounded-3 overflow-hidden">
+              <div class="news-header px-0 rounded-3 overflow-hidden">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product3.jpg"
@@ -437,7 +437,7 @@
           </div>
           <div class="item wow fadeInUp mx-1">
             <div class="card-news">
-              <div class="news-header rounded-3 overflow-hidden">
+              <div class="news-header px-0 rounded-3 overflow-hidden">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product4.jpg"
@@ -483,7 +483,7 @@
           </div>
           <div class="item wow fadeInUp mx-1">
             <div class="card-news">
-              <div class="news-header rounded-3 overflow-hidden">
+              <div class="news-header px-0 rounded-3 overflow-hidden">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product2.jpg"
@@ -529,7 +529,7 @@
           </div>
           <div class="item wow fadeInUp mx-1">
             <div class="card-news">
-              <div class="news-header rounded-3 overflow-hidden">
+              <div class="news-header px-0 rounded-3 overflow-hidden">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product3.jpg"
@@ -577,12 +577,12 @@
       </div>
       <div class="last-post my-7">
         <h3 class="fs-5 pb-3 my-3 border-bottom border-secondary border-2">
-          Hot news
+          Last news
         </h3>
         <div class="row wow bounceInLeft">
           <div class="col-lg-12 col-md-6 py-3">
             <div class="card-news row d-flex align-items-center">
-              <div class="col-lg-3 news-header rounded-3 overflow-hidden">
+              <div class="col-lg-3 px-0 news-header rounded-3 overflow-hidden">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product2.jpg"
@@ -627,7 +627,7 @@
           </div>
           <div class="col-lg-12 col-md-6 py-3">
             <div class="card-news row d-flex align-items-center">
-              <div class="col-lg-3 news-header rounded-3 overflow-hidden">
+              <div class="col-lg-3 news-header rounded-3 overflow-hidden px-0">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product2.jpg"
@@ -672,7 +672,7 @@
           </div>
           <div class="col-lg-12 col-md-6 py-3">
             <div class="card-news row d-flex align-items-center">
-              <div class="col-lg-3 news-header rounded-3 overflow-hidden">
+              <div class="col-lg-3 news-header rounded-3 overflow-hidden px-0">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product2.jpg"
@@ -717,7 +717,7 @@
           </div>
           <div class="col-lg-12 col-md-6 py-3">
             <div class="card-news row d-flex align-items-center">
-              <div class="col-lg-3 news-header rounded-3 overflow-hidden">
+              <div class="col-lg-3 news-header rounded-3 overflow-hidden px-0">
                 <img
                   class="img-cover rounded-3"
                   src="uploads/banner-product2.jpg"
