--- a/contact.html
+++ b/contact.html
@@ -316,59 +316,75 @@
     </section>
     <div class="section contact-main mb-7 container">
       <div class="row g-3">
-        <div class="col-lg-6 col-sm-12 col-12 wow fadeInLeft">
-          <div class="contact-map rounded-2 overflow-hidden">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.4435924065333!2d106.62525347628518!3d10.853826357758717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752bee0b0ef9e5%3A0x5b4da59e47aa97a8!2zQ8O0bmcgVmnDqm4gUGjhuqduIE3hu4FtIFF1YW5nIFRydW5n!5e0!3m2!1svi!2s!4v1710148985606!5m2!1svi!2s"
-              width="100%"
-              height="350"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+        <div
+          class="col-lg-6 col-sm-12 col-12 wow fadeInLeft rounded-2 overflow-hidden"
+        >
+          <iframe
+            class="rounded-2"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.4435924065333!2d106.62525347628518!3d10.853826357758717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752bee0b0ef9e5%3A0x5b4da59e47aa97a8!2zQ8O0bmcgVmnDqm4gUGjhuqduIE3hu4FtIFF1YW5nIFRydW5n!5e0!3m2!1svi!2s!4v1710148985606!5m2!1svi!2s"
+            width="100%"
+            height="100%"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
         <div class="col-lg-6 col-sm-12 col-12 wow fadeInRight">
-          <form action="" class="d-flex flex-column gap-3">
-            <div class="form-item">
+          <form class="row g-3 needs-validation" novalidate>
+            <div class="col-md-12">
+              <label for="validationCustom01" class="form-label fw-medium"
+                >Full name</label
+              >
               <input
-                id="fullname"
                 type="text"
+                class="form-control"
+                id="validationCustom01"
                 required
-                class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
-                placeholder="Fullname"
               />
+              <div class="valid-feedback">Looks good!</div>
             </div>
-            <div class="form-item">
+            <div class="col-md-12">
+              <label for="validationCustom02" class="form-label fw-medium"
+                >Phone number</label
+              >
               <input
-                id="email"
+                type="number"
+                class="form-control"
+                id="validationCustom02"
+                required
+              />
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="col-md-12">
+              <label for="validationCustom02" class="form-label fw-medium"
+                >Email</label
+              >
+              <input
                 type="email"
+                class="form-control"
+                id="validationCustom02"
                 required
-                class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
-                placeholder="Email"
               />
+              <div class="valid-feedback">Looks good!</div>
             </div>
-            <div class="form-item">
-              <input
-                id="call"
-                type="text"
-                required
-                class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
-                placeholder="Enter Your Phone Number"
-              />
-            </div>
-            <div class="form-floating">
+            <div class="col-md-12 mb-3">
+              <label
+                for="exampleFormControlTextarea1"
+                class="form-label fw-medium"
+                >Example textarea</label
+              >
               <textarea
-                class="form-control mt-2"
-                placeholder="Leave a comment here"
-                id="floatingTextarea2"
-                style="height: 100%"
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
               ></textarea>
-              <label for="floatingTextarea2">Comments</label>
             </div>
-            <div class="">
-              <button class="btn btn-primary text-white fw-bolder">
+            <div class="col-12">
+              <button
+                class="btn btn-primary fw-bolder text-white"
+                type="submit"
+              >
                 Submit
               </button>
             </div>
