--- a/passnew.html
+++ b/passnew.html
@@ -249,41 +249,52 @@
               <div class="form-logo d-flex justify-content-center">
                 <img src="uploads/logo.png" alt="" width="120" />
               </div>
-              <form
-                action=""
-                class="form-content mt-3 d-flex flex-column gap-3"
-              >
-                <div class="form-item">
-                  <label for="password" class="fw-medium">Password</label>
-                  <input
-                    id="password"
-                    type="password"
-                    required
-                    class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
-                    placeholder="Enter Your Password"
-                  />
-                </div>
-                <div class="form-item">
-                  <label for="passconfirm" class="fw-medium"
-                    >Password Confirm</label
+              <form class="row g-3 needs-validation" novalidate>
+                <div class="col-md-12">
+                  <label for="password" class="form-label fw-medium"
+                    >Password</label
                   >
                   <input
-                    id="passconfirm"
                     type="password"
+                    class="form-control"
+                    id="password"
+                    aria-describedby="inputGroupPrepend"
                     required
-                    class="w-100 border rounded-1 border-secondary py-2 px-3 mt-2"
-                    placeholder="Password Confirm"
+                    pattern="(?=.*\d.*)(?=.*[a-zA-Z].*)(?=.*[!#\$%&\?].*).{8,}"
                   />
+                  <div class="invalid-feedback">
+                    Incorrect password formatPlease
+                  </div>
                 </div>
+                <div class="col-md-12">
+                  <label for="passwordconfirm" class="form-label fw-medium"
+                    >Password confirm</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="passwordconfirm"
+                    aria-describedby="inputGroupPrepend"
+                    required
+                    pattern="(?=.*\d.*)(?=.*[a-zA-Z].*)(?=.*[!#\$%&\?].*).{8,}"
+                  />
+                  <div class="invalid-feedback">
+                    Incorrect password formatPlease
+                  </div>
+                </div>
+
                 <div
-                  class="login-btn mt-2 d-flex justify-content-between align-items-center"
+                  class="col-12 d-flex justify-content-between align-items-end mt-4"
                 >
-                  <button class="btn btn-primary text-white fw-semibold">
+                  <button
+                    class="btn btn-primary fw-bolder text-white"
+                    type="submit"
+                  >
                     Submit
                   </button>
-                  <span
-                    ><a
-                      class="text-border-color text-decoration-none fs-6"
+                  <span>
+                    <a
+                      class="text-decoration-none fw-semibold text-primary fs-6"
                       href="#"
                       >Signin?</a
                     ></span
